# QuadTodo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
openspec/changes/add-todo-document-feature/: tasks.md
openspec/changes/archive/2026-02-17-macos-titlebar-dark-mode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-18-add-custom-slogan-header/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-20-add-todo-document-feature/: design.md  proposal.md
openspec/changes/archive/2026-02-21-auto-focus-new-todo/: proposal.md  (+1 more)
openspec/changes/auto-focus-new-todo/: design.md  tasks.md
openspec/changes/collapse-completed-todos/: design.md  proposal.md  tasks.md
openspec/changes/delete-todo-document-behavior/: design.md  tasks.md
openspec/changes/fix-enter-key-delete-behavior/: tasks.md
openspec/changes/import-export-todos-with-documents/: design.md  tasks.md
openspec/specs/data-export/: spec.md
openspec/specs/data-import/: spec.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: client.ts  documentApi.ts  exportApi.ts  importApi.ts  todoApi.ts
src/components/: DocumentEditor.vue  ImportModeDialog.vue  Quadrant.vue  QuadrantGrid.vue  Settings.vue  TodoItem.vue  TodoList.vue
src/components/common/: Button.vue  ConfirmDialog.vue  IconButton.vue
src/stores/: settingsStore.ts  todoStore.ts
src/styles/: index.css
src/types/: index.ts
(+19 files in other folders)
